Fix presentation on small devices

--- a/zgallery-frontend/src/css/Gallery.css
+++ b/zgallery-frontend/src/css/Gallery.css
@@ -18,6 +18,10 @@
 }
 
 .Carousel-container {
+  display: none;
+}
+
+.Carousel-container.Carousel-visible {
   display: block;
   position: fixed;
   z-index: 20;
@@ -26,15 +30,10 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.9);
-  animation-name: fadeout;
-  animation-duration: 0.6s;
-}
-
-.Carousel-visible {
   animation-name: fadein;
   animation-duration: 0.6s;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9);
 }
 
 .Album-image {
